tests/knowledge/context/aws/scenarios/cross_version/cloudformation_special_scenarios/get_ref_func/cfn-account-data/cloudrail-developer/us-east-1/ec2-describe-network-acls.json
{
    "NetworkAcls": [
        {
            "Associations": [],
            "Entries": [
                {
                    "CidrBlock": "10.41.37.0/0",
                    "Egress": true,
                    "Protocol": "-1",
                    "RuleAction": "allow",
                    "RuleNumber": 100
                },
                {
                    "CidrBlock": "10.41.37.0/0",
                    "Egress": true,
                    "Protocol": "-1",
                    "RuleAction": "deny",
                    "RuleNumber": 32767
                },
                {
                    "CidrBlock": "10.41.37.0/0",
                    "Egress": false,
                    "Protocol": "-1",
                    "RuleAction": "allow",
                    "RuleNumber": 100
                },
                {
                    "CidrBlock": "10.41.37.0/0",
                    "Egress": false,
                    "Protocol": "-1",
                    "RuleAction": "deny",
                    "RuleNumber": 32767
                }
            ],
            "IsDefault": true,
            "NetworkAclId": "acl-0cf1f51f8b2a58349",
            "OwnerId": "698055230729",
            "Tags": [],
            "VpcId": "vpc-000a7e8b1ce43cb61"
        }
    ]
}
