tests/knowledge/context/aws/scenarios/cross_version/cloudformation_special_scenarios/get_ref_func/cfn-account-data/cloudrail-developer/us-east-1/ec2-describe-vpcs.json
{
    "Vpcs": [
        {
            "CidrBlock": "172.16.0.0/16",
            "DhcpOptionsId": "dopt-0793fa7d",
            "State": "available",
            "VpcId": "vpc-000a7e8b1ce43cb61",
            "OwnerId": "769993059587",
            "InstanceTenancy": "default",
            "CidrBlockAssociationSet": [
                {
                    "AssociationId": "vpc-cidr-assoc-0ce1137db2a475a64",
                    "CidrBlock": "172.16.0.0/16",
                    "CidrBlockState": {
                        "State": "associated"
                    }
                }
            ],
            "IsDefault": false,
            "Tags": [
                {
                    "Key": "aws:cloudformation:logical-id",
                    "Value": "myExistingVpc"
                },
                {
                    "Key": "aws:cloudformation:stack-id",
                    "Value": "arn:aws:cloudformation:us-east-1:769993059587:stack/testCfnStack/34368b90-d179-11eb-af6a-1249719cb5f1"
                },
                {
                    "Key": "aws:cloudformation:stack-name",
                    "Value": "testCfnStack"
                }
            ]
        }
    ]
}
